# ev3dev-lang-cpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.md  Makefile  README.md  autogen-config.json  button-test.cpp  drive-test.cpp  ev3dev-lang-demo.cpp  ev3dev-lang-test.cpp  ev3dev.cpp  ev3dev.h  makefile  remote_control-test.cpp  upload.sh
cmake/: ev3dev-config.cmake
demos/: CMakeLists.txt  drive-test.cpp  ev3dev-lang-demo.cpp  ev3dev-lang-test.cpp  remote-control.cpp  sound-test.cpp
templates/: autogen-header.liquid  generic-class-description.liquid  generic-declare-property-value.liquid  generic-define-property-value.liquid  generic-get-set.liquid  generic_report_status.liquid  led-color-methods.liquid  leds-declare.liquid  leds-define.liquid  motor_commands.liquid  special-sensor-declaration.liquid
tests/: CMakeLists.txt  api_tests.cpp
